[gd_scene load_steps=7 format=3 uid="uid://cglw4edq367yk"]

[ext_resource type="Script" path="res://FallingSprite.gd" id="1_lvol3"]
[ext_resource type="Texture2D" uid="uid://7y1yamlh1qfi" path="res://Assets/1 Tiles/IndustrialTile_71.png" id="2_60tpj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yehk4"]
size = Vector2(18, 18)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rpmcp"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fsp0l"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 0.0
initial_velocity_min = 163.64
initial_velocity_max = 545.45
angular_velocity_min = -560.61
angular_velocity_max = 309.82
gravity = Vector3(0, 200, 0)
radial_accel_max = 100.0
scale_min = 0.5
scale_max = 0.5
anim_speed_min = 1.94
anim_speed_max = 10.47
anim_offset_max = 1.0
turbulence_noise_strength = 2.4
turbulence_noise_scale = 0.71

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yx15o"]
size = Vector2(20, 17)

[node name="Falling Platform" type="AnimatableBody2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_60tpj")
script = ExtResource("1_lvol3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yehk4")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_rpmcp")
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_fsp0l")
texture = ExtResource("2_60tpj")
lifetime = 5.0
one_shot = true
speed_scale = 1.5
explosiveness = 1.0
collision_base_size = 0.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_yx15o")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="Sprite2D" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="Sprite2D" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="Sprite2D" method="_on_timer_timeout"]
